第一次上传

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
 
-chdir           = /root/human/myproject
+chdir           = /root/magicwardrobe_backend
 module          = myproject.wsgi
 http-socket     = :8000
 master          = True
