--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
 
-chdir           = /root/magicwardrobe_backend
+chdir           = /root/backend
 module          = myproject.wsgi
 http-socket     = :8000
 master          = True
