--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,8 +8,7 @@ master          = True
 processes       = 4
 threads         = 1
 vacuum          = True
-
-
+buffer-size     = 65536
 
 # backend run uwsgi
 daemonize       = %(chdir)/log/uwsgi-8000.log
